gl31-master/src/test/deca/syntax/valid/complet/class_multiplemeth.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    void methodeTest(int param1, float param2){
        printx(param1*param2);
    }
    void toString(){
        println("Phrase random");
    }
    void resFloat(float param){
        print(param);
    }
}
