gl31-master/src/test/deca/syntax/invalid/complet/meth_unclosedcond.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, ')' manquant
//
// Historique:
//    cree le 18/01/2021
class Test{
    void toString({
        println("random");
    }
}
